--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
-    "next": "15.5.3",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.3.0",
     "sonner": "^2.0.7",
